# pycounts_fe

./: .flake8  CHANGELOG.md  CONTRIBUTING.md  README.md  ferhat_setup_notes.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_fe/: __init__.py
tests/: test_pycounts_fe.py
