[tool.poetry]
name = "pycounts_fe"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Ferhat Erata <ferhat.erata@yale.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
